# intrinsic-green-learning

./: .gitignore  CITATION.cff  FORGEJO.md  LICENSE  Makefile  README.md  REUSE.toml  SECURITY.md  lefthook.yml  mkdocs.yml  pyproject.toml  renovate.json  versions.json
.agents/: AGENTS.md  settings.json
.cursor/rules/: guidelines.mdc
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: codeql.yml  docs.yaml  fuzz.yml  pull_request.yaml  scorecard.yml  security.yml  semantic-release.yml  stale.yml
LICENSES/: MIT.txt
benchmarks/: __init__.py
benchmarks/vp/: REPORT.md  __init__.py  _harness.py  data.py  e1_equivalence.py  e2_crossover.py  e3_conditioning.py  e4_outer_acceleration.py  e6_quality.py  e7_generalized_vp.py  solvers.py  vp_loop.py
docs/: about.md  concepts.md  index.md  quickstart.md  security.md
docs/guidelines/: api-design.md  async.md  dependencies.md  docstrings.md  errors.md  index.md  releases.md  testing.md  typing.md
docs/reference/: config.md  core.md  data.md  device.md  exceptions.md  index.md  io.md  kernels.md  matryoshka.md  metrics.md  models.md  nlp.md  nn.md  preprocessing.md  seeding.md  spd.md  spectral.md  types.md  viz.md  whitening.md
examples/: README.md  __init__.py  _utils.py
examples/nlp/: __init__.py  requirement_tiny_gpt2.py
examples/synthetic/: __init__.py  moons_xor.py  poisson_1d.py  save_load.py  swiss_roll_recon.py  torus_classification.py  whitened_regression.py
src/hother/: __init__.py
src/igl/: __init__.py  _optional.py  config.py  device.py  exceptions.py  seeding.py  types.py
src/igl/core/: __init__.py  encoder.py  kernel.py  loss.py  normalization.py  solver.py  trainer.py
src/igl/data/: __init__.py  synthetic.py
src/igl/io/: __init__.py  _module.py  _schema.py
src/igl/kernels/: __init__.py  _constants.py  _registry.py  cauchy.py  gabor.py  gaussian.py  helmholtz.py  laplacian.py  mexican_hat.py  multiquadric.py  soft_box.py  yukawa.py
src/igl/matryoshka/: __init__.py  dimension_curve.py  knockout.py  sampler.py
src/igl/metrics/: __init__.py  dimension.py  elbow.py
src/igl/models/: __init__.py  _base.py  autoencoder.py  classifier.py  distiller.py  regressor.py
src/igl/nlp/: __init__.py  _gate.py  _hf.py  activations.py  continuation.py  head.py  requirement.py
src/igl/nn/: __init__.py  module.py
src/igl/preprocessing/: __init__.py  _pyriemann.py  covariances.py  dim_reduce.py  regularization.py
src/igl/spd/: __init__.py  airm.py  linalg.py  log_eig.py  orthogonality.py  preconditioning.py  reconstruction.py
src/igl/spectral/: __init__.py  _build.py  kernel.py  multi.py  null_space.py  refresh.py
src/igl/viz/: __init__.py  _matplotlib.py  dimension_curve.py
src/igl/whitening/: __init__.py  linalg.py  loss.py  metrics.py  whitener.py
tests/: conftest.py  test_benchmarks_smoke.py  test_config.py  test_data.py  test_device.py  test_dimension_curve.py  test_distiller.py  test_encoder.py  test_example.py  test_exceptions.py  test_fuzz_invariants.py  test_imports.py  test_io.py  test_kernel.py  test_kernels.py  test_loss.py  test_matryoshka_utils.py  test_metrics.py  test_models.py  test_module.py  test_nlp.py  test_normalization.py  test_optional.py  test_preprocessing_covariances.py  test_sampler.py  test_solver.py  test_spd_airm.py  test_spd_linalg.py  test_spd_log_eig.py  test_spd_orthogonality.py  test_spd_preconditioning.py  test_spd_reconstruction.py  test_spd_reproducibility.py  test_spectral_bases.py  test_spectral_data_driven.py  test_spectral_integration.py  test_spectral_kernel.py  test_spectral_null_space.py  test_trainer.py  test_types.py  (+2 more)
v0.1/guidelines/api-design/: index.html
v0.1/guidelines/docstrings/: index.html
v0.1/reference/: index.html
v0.1/reference/kernels/: index.html
v0.1/reference/matryoshka/: index.html
v0.1/reference/spd/: index.html
v0.1/reference/spectral/: index.html
v0.1/reference/viz/: index.html
v0.10/: 404.html  objects.inv
v0.10/about/: index.html
v0.10/concepts/: index.html
v0.10/guidelines/releases/: index.html
v0.10/guidelines/testing/: index.html
v0.10/guidelines/typing/: index.html
v0.10/quickstart/: index.html
v0.10/reference/: index.html
v0.10/reference/config/: index.html
v0.10/reference/data/: index.html
v0.10/reference/device/: index.html
v0.10/reference/exceptions/: index.html
v0.10/reference/io/: index.html
v0.10/reference/matryoshka/: index.html
v0.10/reference/nn/: index.html
v0.10/reference/preprocessing/: index.html
v0.10/reference/seeding/: index.html
v0.10/reference/types/: index.html
v0.10/search/: search_index.json
v0.10/security/: index.html
v0.11/: 404.html  index.html  objects.inv
v0.11/concepts/: index.html
v0.11/guidelines/: index.html
v0.11/quickstart/: index.html
v0.11/security/: index.html
v0.12/: index.html  objects.inv
v0.12/about/: index.html
v0.12/guidelines/: index.html
v0.12/reference/: index.html
v0.12/search/: search_index.json
v0.2/: index.html  objects.inv
v0.2/about/: index.html
v0.2/concepts/: index.html
v0.2/guidelines/: index.html
v0.2/quickstart/: index.html
v0.2/reference/: index.html
v0.2/search/: search_index.json
v0.2/security/: index.html
v0.3/: 404.html
v0.3/concepts/: index.html
v0.3/guidelines/: index.html
v0.4/: 404.html
v0.4/concepts/: index.html
v0.5/: objects.inv
v0.5/quickstart/: index.html
v0.6/: 404.html  objects.inv
v0.6/about/: index.html
v0.6/guidelines/: index.html
v0.6/reference/: index.html
v0.6/search/: search_index.json
v0.6/security/: index.html
v0.7/: 404.html  index.html
v0.7/about/: index.html
v0.7/concepts/: index.html
v0.7/guidelines/: index.html
v0.7/quickstart/: index.html
v0.7/search/: search_index.json
v0.7/security/: index.html
v0.8/: objects.inv
v0.8/reference/: index.html
v0.9/: index.html
v0.9/about/: index.html
v0.9/concepts/: index.html
v0.9/guidelines/: index.html
v0.9/reference/: index.html
v0.9/search/: search_index.json
(+140 files in other folders)
