[project]
name = "hother-change-me"
version = "0.0.0"
description = "Template for python projects"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
]


[project.urls]
"Homepage" = "https://github.com/hotherio/CHANGE-ME"
"Bug Tracker" = "https://github.com/hotherio/CHANGE-ME/issues"
"Source" = "https://github.com/hotherio/CHANGE-ME"
"Documentation" = "https://hotherio.github.io/CHANGE-ME/latest/"

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hother"
module-root = "src"
source-include = [
    "tests/**",
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
    "cliff.toml",
    "lefthook.yml",
]


[dependency-groups]
dev = [
    "pytest>=9.0.3",          # CVE-2025-71176 fixed in 9.0.3
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "pytest-randomly>=3.16",
    "hypothesis>=6.122",
    "vulture>=2.14",
    "pretty_errors>=1.2",
    "ruff==0.8.6",
    "basedpyright==1.39.6",
    "lefthook==1.13.0",
    "pyyaml>=6.0.2",
    "git-cliff>=2.7.0",
    "detect-secrets>=1.5.0",
]
doc = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.49",
    "mkdocs-material-extensions==1.3.1",
    "mike==2.1.3",
    "mkdocstrings[python]==0.27.0"
]

[tool.uv.sources]
torch = { index = "hother" }

[[tool.uv.index]]
name = "hother"
url = "https://hotherio.github.io/pypi-registry/"
publish-url = "https://hotherio.github.io/pypi-registry/"

[tool.ruff]
line-length = 128
target-version = "py313"

# Enable multiple rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
]

# Ignore specific rules
ignore = [
    "PLR0913",  # Too many arguments
]

# Configure import sorting (replaces isort)
[tool.ruff.isort]
known-first-party = ["hother"]

# Format settings
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
include = ["src/hother"]
exclude = [
    "tests",
    "build",
    "dist",
    ".venv",
]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
xfail_strict = true
addopts = "-n auto --strict-markers --strict-config --cov=hother --cov-report=term-missing --cov-report=html"
markers = [
    "general: general tests",
]

[tool.coverage.run]
source = ["src/hother"]
omit = ["*/tests/*", "*/__init__.py", "*/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.hatch.envs.default]
installer = "uv"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_vcs_release = true
upload_to_pypi = true
build_command = "pip install build && python -m build"
tag_format = "v{version}"
major_on_zero = false
allow_zero_version = true
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): bump to {version}"

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "Hother Bot <github-bot@hother.io>"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build", "chore", "ci", "docs", "feat", "fix",
    "perf", "refactor", "style", "test", "revert",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^chore\\(release\\):",
    "^Merge pull request",
]


